[gd_scene load_steps=3 format=2]

[ext_resource path="res://Level2/MinigameProfilkasten/ProfilkastenTool.gd" type="Script" id=1]
[ext_resource path="res://Level2/MinigameProfilkasten/Assets/Images/schaufel.PNG" type="Texture" id=2]

[node name="ProfilkastenTool" type="Area2D" groups=["tool"]]
position = Vector2( 566, 371 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="area_entered" from="." to="." method="_on_ProfilkastenTool_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_ProfilkastenTool_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_ProfilkastenTool_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ProfilkastenTool_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
